kaptifi-app-deployment-sfs-2.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: splash-kaptifi
spec:
  replicas: 3
  serviceName: splash-kaptifi
  selector:
    matchLabels:
      app: splash-kaptifi
  template:
    metadata:
      labels:
        app: splash-kaptifi
    spec:
      containers:
        - image: /splash-kaptifi:latest-2
          imagePullPolicy: Always
          name: splash-kaptifi
          command: ["/bin/sh"]
          args: ["-c", "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/"
              name: kaptifi-app-pv-storage
  volumeClaimTemplate:
  - metadata:
      name: splash-kaptifi
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: app-storage
      resources:
        requests:
          storage: 1Gi
