kaptifi-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: splash-kaptifi
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: splash-kaptifi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: splash-kaptifi
  template:
    metadata:
      labels:
        app: splash-kaptifi
    spec:
      containers:
        - image: /splash-kaptifi:latest-2
          imagePullPolicy: Always
          name: splash-kaptifi
          command: ["/bin/sh"]
          args: ["-c", "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
