kaptifi-db-pod-.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: splash-kaptifi-db
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: splash-kaptifi-db
spec:
  serviceName: splash-kaptifi-db
  replicas: 1
  selector:
    matchLabels:
      app: splash-kaptifi-db
  template:
    metadata:
      labels:
        app: splash-kaptifi-db
    spec:
      containers:
        - image: postgres:12
          imagePullPolicy: Always
          name: splash-kaptifi-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data/"
              name: kaptifi-db-pv-storage
      volumes:
        - name: kaptifi-db-pv-storage
          persistentVolumeClaim:
            claimName: kaptifi-pv-claim
