kaptifi-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: splash-kaptifi-service
    app.kubernetes.io/instance: splash-kaptifi-service-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: splash-kaptifi-service
spec:
  type: NodePort
  selector:
    app: splash-kaptifi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
