kaptifi-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tv-ingress-qa
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules: 
  - host: qa-tv-assets-service.tkxel-team.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: tv-assets-service
            port: 
              number: 80
